# python-json-benchmarker

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  flake.nix  json_benchmarker.pyi  pyproject.toml  python_json_benchmarker.pyi  rust-toolchain.toml
presentation/: package.json  pnpm-lock.yaml
presentation/src/: App.tsx  index.css  main.tsx
python/: chunked_reader.py  main.py  utils.py
src/: chunked_reader.rs  data.rs  error.rs  lib.rs  main.rs
