[package]
name = "json-benchmarker"
version = "0.1.0"
edition = "2024"

[lib]
name = "json_benchmarker"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
rand = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dependencies.pyo3]
version = "0.28.2"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38"]
