[package]
name = "json-benchmarker"
version = "0.1.0"
edition = "2024"

[lib]
name = "json_benchmarker"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib", "rlib"] # rlib is to allow pyo3_stub_gen to work

[dependencies]
rand = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
pyo3 = { version = "0.28.3", features = ["abi3-py314", "experimental-inspect"] }
thiserror = "2.0.18"
pyo3-stub-gen = "0.22.1"
pyo3-stub-gen-derive = "0.22.1"
