[project]
name = "python-json-benchmarker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "maturin>=1.13.1",
    "pyright>=1.1.408",
    "ruff>=0.15.11",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
