[project]
name = "json-benchmarker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "faker>=40.15.0",
    "humanize>=4.15.0",
    "maturin>=1.0,<2.0",
    "pyright>=1.1.408",
    "ruff>=0.15.11",
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
profile = "release" # Or "dev"
editable-profile = "release" # Or "dev"
manifest-path = "Cargo.toml" # Build the library only
